# guide-api

./: .gitignore  README.md  data_check.py  guide-api  main.py  pyproject.toml  sentence_compr.py  sentence_precalc.py  test  test.py
data/: data_manager.py  database.py
data/hotels/: embeddings.pkl  hotels.jsonl
data/places/: embeddings.pkl  places.jsonl
define/: exceptions.py  objects.py
define/utils/: config.py  consts.py  data_config.json
routes/: common.py  hotels.py  places.py  sentence.py
utils/: config.py  consts.py  data_config.json  data_config.py  logger.py
