[project]
name = "gide-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur",email = "arthuras.work@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "transformers (>=5.9.0,<6.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    ]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
